--- a/css/01.inline.html
+++ b/css/01.inline.html
@@ -14,5 +14,6 @@
     <h1 style="color: blue; text-decoration: underline;">asdf CSS desigh</h1>
     <h1 style="border: 1px solid black;">asdf CSS desigh</h1>
     <h1 style="color: deeppink;">asdf CSS desigh</h1>
+    <h1 style="color: deeppink;">asdf CSS desigh</h1>
 </body>
 </html>
