--- a/css/00.template.html
+++ b/css/00.template.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>제목설정</title>
 </head>
 <body>
-    <h1>asdf</h1>
-    <h1>asdf</h1>
 
 </body>
 </html>
