--- a/css/00.template.html
+++ b/css/00.template.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제목설정</title>
+    <link rel="stylesheet" type="text/css" href="commens.css">
+    <link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
-
+    <a href="#" class="btn">버버트튼</a>
 </body>
 </html>
