--- a/css/00.template.html
+++ b/css/00.template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제목을 설정하세요</title>
-    <link rel="stylesheet" type="text/css" href="commons.css">
+    <link rel="stylesheet" type="text/css" href="commens.css">
     <link rel="stylesheet" type="text/css" href="test.css">
     <style>
         
