--- a/javascript/30.jquery.html
+++ b/javascript/30.jquery.html
@@ -20,10 +20,15 @@
     <style>
         
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+
     <!-- javascript를 의도적으로 head 자리에 배치해서 가장 먼저 실행되도록 구현-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script type="text/javascript">
-        console.log("Hello Javascript!");
+        $(function(){
+            $(".bbb").on("click",function(){
+                alert("hahahahaha");
+            })
+        });
     </script>
 </head>
 <body>
@@ -33,7 +38,7 @@
             <h1>제목</h1>
         </div>
         <div class="cell">
-
+            <button class="btn positive bbb">클클클</button>
         </div>  
     </div>
 
