--- a/javascript/34.value.html
+++ b/javascript/34.value.html
@@ -23,18 +23,24 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <!-- javascript를 의도적으로 head 자리에 배치해서 가장 먼저 실행되도록 구현-->
     <script type="text/javascript">
-        console.log("Hello Javascript!");
+        $(function(){
+            $(".editor").on("input",function(){
+                var sss = $()
+            });
+        });
     </script>
 </head>
 <body>
 
     <div class="container w-500">
         <div class="cell center">
-            <h1>제목</h1>
+            <h1>입력창제어</h1>
         </div>
         <div class="cell">
-
+            <input type="text" class="editor tool w-100">
         </div>  
+
+        <div class=""></div>
     </div>
 
 </body>
