--- a/javascript/35.jjjpr.html
+++ b/javascript/35.jjjpr.html
@@ -23,18 +23,41 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <!-- javascript를 의도적으로 head 자리에 배치해서 가장 먼저 실행되도록 구현-->
     <script type="text/javascript">
-        console.log("Hello Javascript!");
+        $(function(){
+            $(".eedd").on("input",function(){
+                var aa = $(this).val();
+                              
+                //aa 는 this의 밸류다
+                $(this).parent().find('.ccount').text(aa.length);
+
+            });
+        });
     </script>
 </head>
 <body>
 
     <div class="container w-500">
         <div class="cell center">
-            <h1>제목</h1>
+            <h1>자소서서</h1>
         </div>
         <div class="cell">
+            <h2>1번질문</h2>
+            <textarea class="tool w-100 eedd"></textarea>
+            <div class="left"><span class="ccount">0</span>///899</div>
+        </div> 
 
-        </div>  
+        <div class="cell">
+            <h2>2번질문</h2>
+            <textarea class="tool w-100 eedd"></textarea>
+            <div class="left"><span class="ccount">0</span>///899</div>
+        </div> 
+
+        <div class="cell">
+            <h2>3번질문</h2>
+            <textarea class="tool w-100 eedd"></textarea>
+            <div class="left"><span class="ccount">0</span>///899</div>
+        </div> 
+        
     </div>
 
 </body>
