--- a/javascript/36.default.html
+++ b/javascript/36.default.html
@@ -23,17 +23,27 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <!-- javascript를 의도적으로 head 자리에 배치해서 가장 먼저 실행되도록 구현-->
     <script type="text/javascript">
-        console.log("Hello Javascript!");
+       $(function(){
+
+        $(function(){
+            $("a.link-confirm").click(function(){
+                var ccc = window.confirm("asdfasdf"); 
+                
+                return ccc;
+            });
+        });
+       });
     </script>
 </head>
 <body>
 
     <div class="container w-500">
         <div class="cell center">
-            <h1>제목</h1>
+            <h1>제이쿼리 기본이벤</h1>
         </div>
         <div class="cell">
-
+            <a href="https://www.naver.com" class="link link-animation link-confirm">네이버</a>
+            <a href="https://www.naver.com" class="link link-animation ">네이버</a>
         </div>  
     </div>
 
