--- a/javascript/37.form.html
+++ b/javascript/37.form.html
@@ -23,19 +23,45 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <!-- javascript를 의도적으로 head 자리에 배치해서 가장 먼저 실행되도록 구현-->
     <script type="text/javascript">
-        console.log("Hello Javascript!");
+        $(function(){
+
+            var mmmV = false;
+
+
+          $("[name=mmnick]").on("blur",function(){ //.blur가능
+            var regex = /^[가-힣]{2,12}$/;
+            var value = $(this).val();
+            
+            var isValid = regex.test(value);
+            mmmV = isValid;
+
+            $(this).removeClass("success fail")
+                .addClass(isValid ? "success" : "fail");
+
+          });
+          $(".checkff").submit(function(){
+            console.log(mmmV);
+            return false;
+          });
+        });
     </script>
 </head>
 <body>
-
+    <form action="" method="post" autocapitalize="off" class="checkff">
     <div class="container w-500">
         <div class="cell center">
-            <h1>제목</h1>
+            <h1>닉입력</h1>
         </div>
         <div class="cell">
-
+            <input type="text" name="mmnick" placeholder="한글만써라" class="tool w-100">
+        <div class="success-feedback">가능</div>
+        <div class="fail-feedback">불가능</div>
         </div>  
-    </div>
 
+        <div class="cell">
+            <button class="btn positive">설정버튼</button>
+        </div>
+    </div>
+</form>
 </body>
 </html>
